5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1601_1801.log
== TEST (2019-03-27 15:08:48) 
-- CODE:
p = input("porta:")
n = int(input("repeticoes:"))
feitico = "Abra" + p*n
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:09:23) 
-- CODE:
p = input("porta:")
n = int(input("repeticoes:"))
feitico = "Abra" + p*n
print(feitico)
-- EXECUTION TIME:
0.16007
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:09:53) 
-- CODE:
p = input("porta")
n = int(input("repeticoes:"))
feitico = "Abra" + p*n
print(feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:10:07) 
-- CODE:
p = input("porta")
n = int(input("repeticoes"db42))
feitico = "Abra" + p*n
print(feitico)
-- ERROR:
File "XXXX", line 2
    n = int(input("repeticoes"db42))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:10:16) 
-- CODE:
p = input("porta")
n = int(input("repeticoes"))
feitico = "Abra" + p*n
print(feitico)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:12:04) 
-- CODE:
p = input("porta")
n = int(input("repeticoes"))
feitico = "Abra" + p*n
print("feitico" .)
-- ERROR:
File "XXXX", line 4
    print("feitico" .)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:15:41) 
-- CODE:
texto = input("Abra porta")
P = int(input("numero:"))
feitico = texto*4

-- ERROR:
File "XXXX", line 4
    print("feitico" .)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:16:07) 
-- CODE:
texto = input("Abra porta")
P = int(input("numero:"))
feitico = texto*4
print(feitico)

-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:16:10) 
-- CODE:
texto = input("Abra porta")
P = int(input("numero:"))
feitico = texto*4
print(feitico)

-- EXECUTION TIME:
0.144735
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarrocarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixacaixacaixacaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:16:50) 
-- CODE:
texto = input("Abra porta" .)
P = int(input("numero:"))
feitico = texto*p
print(feitico)

-- EXECUTION TIME:
0.124756
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 1
    texto = input("Abra porta" .)
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:17:26) 
-- CODE:
texto = input("Abra porta" .)
P = int(input("numero:"))
feitico = (texto+porta)*p
print(feitico)

-- ERROR:
File "XXXX", line 1
    texto = input("Abra porta" .)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:17:35) 
-- CODE:
texto = input("Abra porta")
P = int(input("numero:"))
feitico = (texto+porta)*p
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = (texto+porta)*p
NameError: name 'porta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:17:39) 
-- CODE:
texto = input("Abra porta")
P = int(input("numero:"))
feitico = (texto+porta)*p
print(feitico)

-- EXECUTION TIME:
0.16979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 3, in <module>
    feitico = (texto+porta)*p
NameError: name 'porta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:44:50) 
-- CODE:
p = input("porta:")
n = int(input("numero:"))
feitico = Abra + p * n


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = Abra + p * n
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:45:27) 
-- CODE:
p = input("porta")
n = int(input("numero"))
feitico = Abra + p * n
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = Abra + p * n
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:47:28) 
-- CODE:
p = input("porta")
n = int(input("Abra +"))
print(n)


-- EXECUTION TIME:
0.139434
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
8
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
2
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:47:31) 
-- CODE:
p = input("porta")
n = int(input("Abra +"))
print(n)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:49:09) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = 4*n+p
print(feitico)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = 4*n+p
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:52:14) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = n + p
print(feitico*4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = n + p
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:52:18) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = n + p
print(feitico*4)


-- EXECUTION TIME:
0.159934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 3, in <module>
    feitico = n + p
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:54:01) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = n + p
print(feitico,4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = n + p
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:54:05) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = n + p
print(feitico,4)


-- EXECUTION TIME:
0.11233
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 3, in <module>
    feitico = n + p
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:54:09) 
-- CODE:
p = input("porta")
n = int(input("Abra"))
feitico = n + p
print(feitico,4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = n + p
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:56:05) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = Abra+p
print(feitico,4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = Abra+p
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:57:00) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p*4
print(feitico,4)


-- OUTPUT:
livrolivrolivrolivro 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:57:32) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p*4
print(feitico, 4)


-- OUTPUT:
livrolivrolivrolivro 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:57:56) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p*4
print(feitico , 4)


-- OUTPUT:
livrolivrolivrolivro 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:58:28) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = +p*4
print(feitico , 4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = +p*4
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:59:22) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p 
print(feitico , 4)


-- OUTPUT:
livro 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:59:53) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p 
print(feitico * 4)


-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:01:26) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p 
print(feitico, * 4)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico, * 4)
TypeError: print() argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:02) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p 
print(feitico, * 4)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(feitico, * 4)
TypeError: print() argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:34) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p*4
print(feitico )



-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:10:08) 
-- CODE:
p = input("nome do objeto:")
n = int(input("numero:"))
feitico = p*4
print(feitico )



-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:10:25) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero:"))
feitico = p*4
print(feitico )



-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:11:00) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero:"))
feitico = p*n
print(feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:11:28) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero:"))
feitico = p*n
print(feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:11:58) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero:"))
feitico = p*n
print(feitico)



-- EXECUTION TIME:
0.253428
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:12:28) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero:"))
feitico = p*n
print(feitico)



-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:14:14) 
-- CODE:
p = input("nome do objeto :")

feitico = Abra + p
print(feitico*4)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico = Abra + p
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:17:23) 
-- CODE:
p = input("nome do objeto :")
n = int(input("numero"))

print(Abra+p*n)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Abra+p*n)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:20:33) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = a*b





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Abra+p*n)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:21:48) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = a+ ":"*b
print(feitico)





-- OUTPUT:
livro::::::::
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:22:24) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = "a+" *b
print(feitico)





-- OUTPUT:
a+a+a+a+a+a+a+a+
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:22:51) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = "a" *b
print(feitico)





-- OUTPUT:
aaaaaaaa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:23:29) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = "a * b ."
print(feitico)





-- OUTPUT:
a * b .
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:26:38) 
-- CODE:
a = input("nome do objeto :")
b = int(input("numero"))
feitico = a*b
print(feitico)





-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:30:25) 
-- CODE:
a = "Abra"+input("nome do objeto :")
b = int(input("numero"))
feitico = a*b
print(feitico)





-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:31:34) 
-- CODE:
a = "Abra"+input("nome do objeto :")
b = int(input("numero"))
feitico = a*b
print(feitico)





-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:32:30) 
-- CODE:
a = " Abra "+input("nome do objeto :")
b = int(input("numero"))
feitico = a*b
print(feitico)





-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:33:01) 
-- CODE:
a = " Abra "+input("nome do objeto :")
b = int(input("numero"))
feitico = a*b
print(feitico)





-- EXECUTION TIME:
0.146406
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
